# curves

./: CMakeLists.txt  benchmark.sh
src/: BSpline.cpp  BSpline.h  CMakeLists.txt  Curve.cpp  Curve.h  Patch.cpp  Patch.h
src/impl/: BSpline.cpp  BSpline.h  LagrangeInterpolator.cpp  LagrangeInterpolator.h
test/: CMakeLists.txt  benchmark.cpp  lagrange.cpp  main.cpp  patch.cpp  spline.cpp
